# SLAM_Camera

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dependencies.md  Dockerfile  build.sh  calib.yaml  displacement.csv  displacement_proccessed.csv  pre_build.sh
Core/: main.cpp  result.cpp  test.cpp
Core/src/: filterKalman.cpp  filterKalman.hpp  gms_matcher.cpp  gms_matcher.h  gms_matcher_impl.h  image_stabilization.cpp  image_stabilization.hpp
Examples/Monocular/: EuRoC.yaml  mono_euroc  mono_euroc.cc  mono_kitti  mono_tum  mono_tum_vi
Examples/Monocular-Inertial/: mono_inertial_euroc
Examples/Stereo/: stereo_euroc
Examples/Stereo-Inertial/: stereo_inertial_euroc
Examples_old/Monocular-Inertial/: mono_inertial_tum_vi_old
Examples_old/RGB-D/: rgbd_tum_old
Examples_old/Stereo/: stereo_euroc_old  stereo_kitti_old  stereo_tum_vi_old
Examples_old/Stereo-Inertial/: stereo_inertial_euroc_old  stereo_inertial_tum_vi_old
Vocabulary/: .gitignore
camera_calib/: CMakeLists.txt  calib.yaml  calibrate.cpp
docs/: .$Untitled Diagram.drawio.bkp  .$Untitled Diagram.drawio.dtmp  Untitled Diagram.drawio
evaluation/: .gitignore  associate.py  evaluate_ate_scale.py  own_traj.py  plot.py
include/: Atlas.h  Config.h  Frame.h  FrameDrawer.h  LoopClosing.h  Map.h  Settings.h  System.h  Tracking.h  Viewer.h
src/: Atlas.cc  Frame.cc  Map.cc  Settings.cc  System.cc  Tracking.cc  Viewer.cc
